feat(#129): add lookup question endpoint implementation.
